programs/nonce/src/instructions/diagnostic message [7]
error[E0716]: temporary value dropped while borrowed
   --> programs/nonce/src/instructions/withdraw.rs:108:39
    |
108 |                         .with_signer(&[signer_seeds]);
    |                                       ^^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
    |                                       |
    |                                       creates a temporary value which is freed while still in use
109 |                     token_interface::transfer_checked(ctx, amount, decimals)?;
    |                                                       --- borrow later used here
    |
    = note: consider using a `let` binding to create a longer lived value

